feat: Add author metadata to a generated PDF

--- a/internal/converter/testdata/001_empty_page/index.html
+++ b/internal/converter/testdata/001_empty_page/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>001 - Empty Page</title>
+    <meta name="author" content="Some Author" />
   </head>
   <body></body>
 </html>
