chore: Add a new HTML page to the test data

--- a/internal/converter/testdata/002_text_page/index.html
+++ b/internal/converter/testdata/002_text_page/index.html
@@ -8,5 +8,8 @@
     <title>001 - Empty Page</title>
     <meta name="author" content="Some Author" />
   </head>
-  <body></body>
+  <body>
+    <h1>Page Title</h1>
+    <p>test</p>
+  </body>
 </html>
